src/test/deca/context/valid/LE/methodvoid.deca
// Description:
//    test les methods void
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    
    void ajoute(int x){
        x = x +1;
    }
}
