src/test/deca/context/invalid/LE/heritage1.deca
// Historique:
//    cree le 22/01/2022

class C1{
    void methode (int a) {

    }
}

class C2 extends C1 {
    void methode(float a) {
        
    }
}